force-app/main/default/objects/Job__c/fields/Alt_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Alt_Reference_Number__c</fullName>
    <label>Alt Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>