force-app/main/default/objects/Job__c/fields/Client_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Number__c</fullName>
    <label>Client Name/Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>