force-app/main/default/objects/Job__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Driver List</relationshipLabel>
    <relationshipName>ContactJobs</relationshipName>
    <type>Lookup</type>
</CustomField>