force-app/main/default/objects/Job__c/fields/Created_For_Company__c.field-meta.xml
<CustomField>
    <fullName>Created_For_Company__c</fullName>
    <label>Created For Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>