force-app/main/default/objects/Job__c/fields/Job_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Job_Created_By__c</fullName>
    <label>Job Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>