force-app/main/default/objects/Job__c/fields/LP_Notes__c.field-meta.xml
<CustomField>
    <fullName>LP_Notes__c</fullName>
    <label>LP Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>