force-app/main/default/objects/Job__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>