force-app/main/default/objects/Job__c/fields/OnePak_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>OnePak_Salesperson__c</fullName>
    <label>OnePak Salesperson</label>
    <length>50</length>
    <type>Text</type>
</CustomField>