force-app/main/default/objects/Job__c/fields/Order_Method__c.field-meta.xml
<CustomField>
    <fullName>Order_Method__c</fullName>
    <label>Order Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>