force-app/main/default/objects/Job__c/fields/Order_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Order_Submitted__c</fullName>
    <label>Order Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>