force-app/main/default/objects/Job__c/fields/RelatedJob__c.field-meta.xml
<CustomField>
    <fullName>RelatedJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Related Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>